...
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    <ListView-->
<!--        android:id="@+id/code_list"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:footerDividersEnabled="true"-->
<!--        android:headerDividersEnabled="true"-->
<!--        app:layout_constraintBottom_toTopOf="@id/total_codes"-->
...
        app:layout_constraintHorizontal_bias="0.240"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995"/>

    <Spinner
        android:id="@+id/sorting_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.960"
        app:layout_constraintStart_toStartOf="parent"
...
