...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838"
        app:maxImageSize="32dp" />


    <Button
        android:id="@+id/profile_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:clickable="true"
        android:focusable="true"
        android:insetLeft="-9dp"
...
